--- a/languages/buy_product_languages.json
+++ b/languages/buy_product_languages.json
@@ -85,7 +85,7 @@
     "discord_select_bot_options_placeholder": "Wählen Sie einen Bot...",
 
     "discord_personalized_bot_label": "Personalisierter Bot",
-    "discord_personalized_bot_description": "Erstellen Sie Ihren eigenen benutzerdefinierten Discord-Bot, der auf Ihre spezifischen Anforderungen und Vorlieben zugeschnitten ist.",
+    "discord_personalized_bot_description": "Entwerfen Sie Ihren eigenen Discord-Bot: maßgeschneidert für Ihre Bedürfnisse und Vorlieben!",
     "discord_modmail_bot_label": "ModMail Bot",
     "discord_modmail_bot_description": "Ein Bot zur Verwaltung des Modmail-Systems Ihres Servers.",
     "discord_music_bot_label": "24/7 Musik Bot",
